# js-embedded-platform

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.travis/: get-toolchain.sh  platform-build.sh
include/: common.h  duk_config.h  eventloop.h  firmware_downloader.h  module.h  platform.h
include/http_parser/: curi.h  http_parser.h
include/lwm2m/client/: lwm2mclient.h
include/lwm2m/core/: internals.h
include/module/: gpio.h  http.h
include/platform/: debug.h  eventloop.h  firmware.h  httpd.h  lwm2md.h  memory.h  module.h
platform/nucleo-f429zi/: CMakeLists.txt  flash.ld
platform/nucleo-f429zi/include/: stm32f429_firmware.h
platform/raspberrypi/: CMakeLists.txt
platform/raspberrypi/src/: register_modules.c
platform/raspberrypi/src/module/: gpio_platform.c
platform/stm32f429-core/: CMakeLists.txt  flash.ld
platform/stm32f429-core/include/: FreeRTOSConfig.h  lwip.h  lwipopts.h  main.h  mbedtls.h  mbedtls_config.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
platform/stm32f429-core/include/platform/: connection.h  sockets.h
platform/stm32f429-core/src/: ethernetif.c  lwip.c  main.c  net_sockets.c  startup.s  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system.c
platform/stm32f429-core/src/lwm2m/client/: lwm2mclient.c  memtrace.c  platform.c  system_api.c
platform/stm32f429-core/src/module/: gpio_platform.c  http.c
platform/stm32f429-core/src/platform/: connection.c  debug.c  eventloop.c  firmware.c  httpd.c  lwm2md.c  memory.c
platform/unix/: CMakeLists.txt
platform/unix/include/: queue.h
platform/unix/include/platform/: connection.h  critical_section.h  queue.h  sockets.h
platform/unix/src/: main.c
platform/unix/src/lwm2m/client/: platform.c
platform/unix/src/module/: gpio_platform.c
platform/unix/src/platform/: connection.c  critical_section.c  debug.c  eventloop.c  firmware.c  httpd.c  lwm2md.c  memory.c  queue.c
src/: duktape.c  entrypoint.c  eventloop.c  firmware_downloader.c
src/http_parser/: curi.c  http_parser.c
src/lwm2m/client/: lwm2mclient.c  object_device.c  object_firmware.c  object_security.c  object_server.c
src/lwm2m/core/: block1.c  bootstrap.c  data.c  discover.c  json.c  liblwm2m.c  list.c  management.c  objects.c  observe.c  packet.c  registration.c  tlv.c  transaction.c  uri.c  utils.c
src/lwm2m/core/er-coap-13/: er-coap-13.c
src/module/: gpio.c  http.c
utils/: firmware-uploader.js  mem-monit.js
